[tool.poetry]
name = "ecgai-drawing"
version = "0.1.13"
description = ""
authors = ["RobC <rob.clapham@gmail.com>"]

[tool.poetry.dependencies]
#TODO change poetry version to <4.0, currently required by scipy
python = "^3.9,<3.12"
numpy = "^1.23.2"
aenum = "^3.1.11"
pydantic = "^1.9.2"
matplotlib = "^3.5.3"
scikit-image = "^0.19.3"
scipy = "^1.9.0"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pre-commit = "^2.20.0"
pylint = "^2.14.5"
coverage = "^6.4.4"
#tox-poetry-installer = {extras = ["poetry"], version = "^0.8.4"}
tox = "^3.25.1"
fluentcheck = "^0.2.0"
black = "^22.6.0"
# both required to run tests in github
#bandit = {extras = ["toml"], version = "^1.7.4"}
#imageio = {extras = ["pyav"], version = "^2.21.1"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = [
    "src/ecgai_drawing/enums/*",
    "other/lib.py"
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
